----- StarLib Changelog -----

9/19/2012, Adam
- Simulator now saves settings for each simulation in trace directory in JSON
- Added timestamp variable to TraceWriter methods
- Removed StarLSim's "simapps" package from the build path
- Simulated apps now start their own trace files, no need to call trace.traceStart()

9/8/2012, Adam
- Cleaned up pieces of StarLib, including Android specific code
- Removed DeadReckoner because it's useless with the iRobot Create chassis
- Changed robot event listener interface to be more extensible for future event types
- Added message reception callback

9/5/2012, Stan
- Removed awt requirements from StarLib and LogicThread classes
- Separated out FardinDeere app and StanTestApp into own project following Adam's changes

9/4/2012, Adam
- Changed SimSettings to use the builder pattern. A separate "settings initializer" is no longer required.
- Changed MotionParameters defaults to values which provides smoother motion.
- MessageContents can now be retrieved and compared

9/1/2012, Adam
- Cleaned up GlobalLogger
- Changed simulator dataflow: Applications now call the simulator to simulate themselves instead of the other way around.
- Updated SimSettings to contain nonstatic public variables. Removed unnecessary path variables for paths to WPT files. This broke every application that referenced SimSettings. These broken applications have been excluded from the build path until they can be split into their own projects and updated.
- Added Javadoc comments to SimSettings.
- Removed StarLSim's Main.java file. This project is no longer runnable.

8/30/2012, Adam
- Cleaned up MotionAutomaton, removed commented out lines of code
- Added straight line and circle motion applications

8/29/2012, Stan
- Made the simapp drawing occur only when logic thread is asleep to prevent having to worry about concurrent modification exceptions
- added MAX_FPS variable to SimSettings, which you can adjust if drawing is blocking for too long