@@ -14,13 +14,13 @@ public class Main {
 	private static String inputFilename = "box";
 
 	public static void main(String[] args) {
-		SvgParser parser = new SvgParser(2500,2500,1500,1500);
+		SvgParser parser = new SvgParser(2500,2500,5000,5000);
 
 		Set<ImageEdge> image = parser.parseImage("input_images/" + inputFilename + ".svg");
 		WptWriter.writeWpt("waypoints/" + inputFilename + ".wpt", image);
 
 		SimSettings.Builder builder = new SimSettings.Builder().DRAWER(new LightPaintDrawer()).WAYPOINT_FILE("waypoints/" + inputFilename + ".wpt").TIC_TIME_RATE(5);
-		builder.N_BOTS(4);		
+		builder.N_BOTS(0);		
 		builder.GRID_XSIZE(5000);
 		builder.GRID_YSIZE(5000);
 		SimSettings settings = builder.build();
