@@ -1,20 +1,20 @@
-WAY,1381,1235,0,0-A
-WAY,1830,1653,0,0-B
-WAY,2232,564,0,1-A
-WAY,1825,205,0,1-B
-WAY,1371,1235,0,2-A
-WAY,726,1748,0,2-B
-WAY,689,1721,0,3-A
-WAY,1217,2134,0,3-B
-WAY,1371,1240,0,4-A
-WAY,2227,575,0,4-B
-WAY,255,1394,0,5-A
-WAY,689,1721,0,5-B
-WAY,1217,2134,0,6-A
-WAY,2750,976,0,6-B
-WAY,1006,828,0,7-A
-WAY,1371,1235,0,7-B
-WAY,250,1399,0,8-A
-WAY,1830,199,0,8-B
-WAY,2750,976,0,9-A
-WAY,2232,564,0,9-B
+WAY,4881,-2265,0,0-A
+WAY,5330,-1847,0,0-B
+WAY,4189,-1779,0,1-A
+WAY,4717,-1366,0,1-B
+WAY,5732,-2936,0,2-A
+WAY,5325,-3295,0,2-B
+WAY,6250,-2524,0,3-A
+WAY,5732,-2936,0,3-B
+WAY,3750,-2101,0,4-A
+WAY,5330,-3301,0,4-B
+WAY,4871,-2265,0,5-A
+WAY,4226,-1752,0,5-B
+WAY,3755,-2106,0,6-A
+WAY,4189,-1779,0,6-B
+WAY,4506,-2672,0,7-A
+WAY,4871,-2265,0,7-B
+WAY,4871,-2260,0,8-A
+WAY,5727,-2925,0,8-B
+WAY,4717,-1366,0,9-A
+WAY,6250,-2524,0,9-B
